change copybutton to client:only

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -6,11 +6,11 @@ import CopyButton from '../components/CopyButton';
 		<h2 class='color'>Contact Me</h2>
 		<div class='btn-wrapper'>
 			<CopyButton
-				client:only="react"
+				client:only
 				message='trevortylerlee@gmail.com'
 			/>
 			<CopyButton
-				client:only="react"
+				client:only
 				message='778-235-3815'
 			/>
 		</div>
