--- a/src/styles/CopyButton.module.css
+++ b/src/styles/CopyButton.module.css
@@ -6,7 +6,8 @@ button {
   border: none;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   cursor: pointer;
-  transition: 0.2s
+  transition: 0.2s;
+  color: black;
 }
 
 button:hover {
