--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
 /* Based on modularscale.com */
 :root {
   --size-300: 0.75rem;
@@ -164,7 +162,7 @@ figcaption {
 *::before,
 *::after {
   box-sizing: border-box;
-  font-family: 'Lexend', sans-serif;
+  font-family: 'Graphik', sans-serif;
 }
 
 /* Remove default margin */
