--- a/src/components/MorePost.astro
+++ b/src/components/MorePost.astro
@@ -3,10 +3,10 @@ const lightGlow = 'rgb(227, 227, 227)'
 const darkGlow = 'rgb(0, 84, 255)'
 const darkBg = 'rgb(41, 44, 57)'
 const lightBg = 'rgb(250, 250, 250)'
-const {date, href, title} = Astro.props
+const {date, href, title, last} = Astro.props
 ---
 
-<div class='wrapper'>
+<div class={last ? 'last' : ''}>
   <a href={href}>
   <div class='post'>
     <p>{title}</p>
@@ -76,6 +76,10 @@ const {date, href, title} = Astro.props
   .date {
     font-size: 0.75rem;
     opacity: 0.5;
+  }
+
+  .last {
+    margin-bottom: 4rem;
   }
 
 </style>
