change landing page copy

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,7 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 <BaseLayout pageTitle={pageTitle}>
 	<div class='intro'>
 		<h1 class='name'>TREVOR LEE</h1>
-		<p>I'm a student at BCIT studying web development and digital design.</p>
-		<p>I use JavaScript, React, and NodeJS to create web applications.</p>
+		<p>Using JavaScript, React, and NodeJS to create web applications.</p>
 	</div>
 	<Card
 	title="Phished – Phish Friends & Family"
@@ -60,10 +59,7 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 
 	.name {
 		margin-top: 4rem;
-	}
-
-	.intro {
-		margin-bottom: 4rem;
+		margin-bottom: -1rem;
 	}
 
 	@media (prefers-reduced-motion: no-preference) {
