--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 <BaseLayout pageTitle={pageTitle}>
 	<div class='intro'>
 		<h1 class='name'>TREVOR LEE</h1>
-		<p>Using JavaScript, React, and NodeJS to create web applications.</p>
+		<p class='desc'>Using JavaScript, React, and NodeJS to create web applications.</p>
 	</div>
 	<Card
 	title="Phished – Phish Friends & Family"
@@ -57,9 +57,14 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 		cursor: default;
 	}
 
-	.name {
+	.intro {
 		margin-top: 4rem;
-		margin-bottom: -1rem;
+		padding-bottom: 2rem;
+	}
+
+	.name,
+	.desc {
+		margin: 0;
 	}
 
 	@media (prefers-reduced-motion: no-preference) {
