text 2 array featured post

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,13 +17,13 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 	src="/phished-screenshot.webp"
 	alt="A tablet and smartphone are next to each other, each displaying a screenshot from the Phished website. The Phished logo, a fish with an envelope for a body, is displayed on the right with the Phished wordmark."
 	/>
-	<!-- <Card
-	title="HTML Color Name Game"
-	desc="An HTML color name matching challenge scored by calculating the difference between two colors"
-	href="/posts/color"
-	src="/noisy-gradient.webp"
-	alt='A grainy gradient made of purple, pink, orange, and red.'
-	/> -->
+	<Card
+	title="Text 2 Array Tool"
+	desc="Make typing arrays less painful"
+	href="/posts/text2array"
+	src="/t2a.jpg"
+	alt='The acronym t2a being spread into an array that contains the elements t, 2, and a.'
+	/>
 	<Card
 	title="Creative Work & Other Stuff"
 	desc=""
@@ -37,11 +37,6 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 		date='DEC 2022'
 		href='https://swankyipsum.vercel.app/'
 		title='Swanky Ipsum'
-	/>
-	<MorePost
-		date='DEC 2022'
-		href='https://text2array.vercel.app/'
-		title='Text 2 Array Tool'
 	/>
 	<MorePost
 		date='NOV 2022'
