adjust spacing on landing page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -119,6 +119,7 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 
 	.more {
 		text-align: left;
+		margin-top: 4rem;
 	}
 
 	@media (min-width: 40rem) {
