add twitter to footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,6 +8,7 @@ const darkLink = 'rgb(26, 30, 43)';
     <span class='links'>
   <a href='https://github.com/boogerbuttcheeks'>Github</a>
   <a href='https://www.linkedin.com/in/trevortylerlee/'>LinkedIn</a>
+  <a href='https://twitter.com/boogerbuttcheek'>Twitter</a>
   </span>
     <!-- The sprites are from pokedb.net!  -->
   <span class='pokemon'>
