add arrow to card on hover

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -7,7 +7,10 @@ const darkGlow = 'rgb(0, 84, 255)'
 <a href={href}>
 <div class='card'>
   <img src={src} alt={alt}/>
-  <p class='title'>{title}</p>
+  <span class='title-wrapper'>
+    <p class='title'>{title}</p>
+    <svg class='arrow' xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+  </span>
   <p>{desc}</p>
 </div>
 </a>
@@ -39,7 +42,7 @@ const darkGlow = 'rgb(0, 84, 255)'
   }
   
   img {
-    transition: 0.2s;
+    transition: 0.2s ease-in-out;
   }
 
   p {
@@ -67,10 +70,29 @@ const darkGlow = 'rgb(0, 84, 255)'
     text-shadow: 0 0 1rem var(--lightGlow);
   }
 
+  a:focus .arrow {
+    opacity: 1;
+  }
+
   .title {
     font-size: 1.25rem;
     font-weight: 600;
     margin-top: 1.25rem;
+  }
+
+  .title-wrapper {
+    display: flex;
+    align-items: baseline;
+  }
+
+  .arrow {
+    margin-left: 0.5rem;
+    opacity: 0;
+    transition: 0.2s ease-in-out;
+  }
+
+  .card:hover .arrow {
+    opacity: 1;
   }
 
   @media (min-width: 40rem) {
