--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -124,10 +124,11 @@ const darkLink = 'rgb(26, 30, 43)';
   .togepi::after {
     content: 'togepi!';
     margin-top: -3.25rem;
+    margin-left: -0.5rem;
   }
 
   .togepi:hover::after {
-    transform: rotate(10deg);
+    transform: rotate(-2deg);
   }
 
   .pichu::after {
