--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 <BaseLayout pageTitle={pageTitle}>
 	<div class='intro'>
 		<h1 class='name'>TREVOR LEE</h1>
-		<p class='desc'>Using JavaScript, React, and NodeJS to create web applications.</p>
+		<p class='desc'>"Trevor ROCKS!!" - Trevor Lee</p>
 	</div>
 	<Card
 	title="Phished – Phish Friends & Family"
