copy and sizing changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,8 +7,7 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 
 <BaseLayout pageTitle={pageTitle}>
 	<div class='intro'>
-		<h1 class='name'>TREVOR LEE</h1>
-		<p class='desc'>"Trevor ROCKS!!" - Trevor Lee</p>
+		<h1 class='name'>Trevor Lee</h1>
 	</div>
 	<Card
 	title="Phished – Phish Friends & Family"
@@ -54,7 +53,7 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 
 	.intro {
 		margin-top: 4rem;
-		padding-bottom: 2rem;
+		padding-bottom: 0rem;
 	}
 
 	.name,
