spacing, font sizes, copy

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -11,6 +11,7 @@ const { pageTitle } = Astro.props
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favi.svg" />
+		<!-- apple get your shit together -->
 		<link rel="apple-touch-icon" type="image/svg+xml" href="/favi.svg?" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
