--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -28,6 +28,7 @@ import CopyButton from '../components/CopyButton';
   .color {
     cursor: default;
 		margin-top: 2rem;
+		font-size: 2.5rem;
   }
 
 	.btn-wrapper {
