--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,11 +7,13 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 
 <BaseLayout pageTitle={pageTitle}>
 	<div class='intro'>
-		<h1 class='name'>Trevor Lee</h1>
 		<marquee aria-hidden="true" scrolldelay='120' scrollamount='4'>
 			<img class='magikarp' src="https://img.pokemondb.net/sprites/black-white/anim/normal/magikarp.gif" alt="Magikarp">
 		</marquee>
+		<h1 class='name'>Trevor Lee</h1>
+		<p class='desc'>Digital designer and web developer</p>
 	</div>
+	<hr />
 	<Card
 	title="Phished – Phish Friends & Family"
 	desc="Protect people you care about from phishing attacks by phishing them yourself"
@@ -52,16 +54,18 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 	h1 {
 		font-size: 3rem;
 		cursor: default;
-	}
-
-	.intro {
-		margin-top: 4rem;
-		padding-bottom: 0rem;
+		display: inline;
 	}
 
 	.name,
 	.desc {
 		margin: 0;
+		position: relative;
+		top: -1rem;
+	}
+
+	.desc {
+		margin-bottom: 4rem;
 	}
 
 	@media (prefers-reduced-motion: no-preference) {
@@ -126,6 +130,7 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 
 	marquee {
 		display: flex;
+		margin: 0;
 	}
 
 	.magikarp {
