--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ const pageTitle = "Trevor Tyler Lee | Homepage"
 <BaseLayout pageTitle={pageTitle}>
 	<div class='intro'>
 		<marquee aria-hidden="true" scrolldelay='120' scrollamount='4'>
-			<img class='magikarp' src="https://img.pokemondb.net/sprites/black-white/anim/normal/magikarp.gif" alt="Magikarp">
+			<img class='magikarp' src="/magikarp.gif" alt="Magikarp">
 		</marquee>
 		<h1 class='name'>Trevor Lee</h1>
 		<p class='desc'>Digital designer and web developer</p>
