--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -44,7 +44,7 @@ const darkLink = 'rgb(26, 30, 43)';
   }
 
   a:hover {
-    color: dodgerblue;
+    color: rgb(21, 113, 205);
   }
 
   :global(.dark) a {
