--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '../layouts/BaseLayout.astro';
 import Card from '../components/Card.astro';
 import MorePost from '../components/MorePost.astro';
-const pageTitle = "Trevor Tyler Lee | Homepage"
+const pageTitle = "Trevor Lee | Homepage"
 ---
 
 <BaseLayout pageTitle={pageTitle}>
