--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -37,6 +37,10 @@ const { frontmatter } = Astro.props;
     margin-top: 3rem;
   }
 
+  .content {
+    margin-top: 2rem;
+  }
+
   @media (min-width: 40rem) {
     img,
     .title {
