--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 import Card from '../components/Card.astro';
-import Marquee from '../components/Marquee';
+import Marquee from '../components/Marquee.astro'
 import MorePost from '../components/MorePost.astro';
 const pageTitle = "Trevor Lee | Homepage"
 ---
@@ -11,7 +11,7 @@ const pageTitle = "Trevor Lee | Homepage"
 		<!-- <marquee aria-hidden="true" scrolldelay='120' scrollamount='4'>
 			<img class='magikarp' src="/magikarp.gif" alt="Magikarp">
 		</marquee> -->
-		<Marquee client:load/>
+		<Marquee />
 		<h1 class='name'>Trevor Lee</h1>
 		<p class='desc'>Digital designer and web developer</p>
 	</div>
