--- a/src/components/Marquee.astro
+++ b/src/components/Marquee.astro
@@ -23,16 +23,16 @@
     11: "lugia",
     12: "tympole",
     13: "hoppip",
-    14: "combee",
-    15: "geodude",
-    16: "ghastly",
-    17: "stunfisk",
+    14: "stunfisk",
+    15: "combee",
+    16: "geodude",
+    17: "ghastly",
     18: "swablu",
     19: "porygon-z",
     20: "magikarp",
     21: "drifloon",
-    22: "mantine",
-    23: "beedrill",
+    22: "beedrill",
+    23: "druddigon",
   };
 
   const d = new Date();
