--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,10 +1,11 @@
 ---
 import BaseLayout from "./BaseLayout.astro";
+import styles from './../styles/CodeBlock.module.css'
 
 const { frontmatter } = Astro.props;
 ---
 
-<BaseLayout pageTitle={frontmatter.title}>
+<BaseLayout style={styles} pageTitle={frontmatter.title}>
   <div>
     {frontmatter.image ? <img src={frontmatter.image.url} alt={frontmatter.image.alt} /> : <></> }
     <h1 class={frontmatter.image ? '' : 'title'}>{frontmatter.title}</h1>
