--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,8 +3,20 @@ import ThemeIcon from "../components/ThemeIcon.astro";
 ---
 
 <nav>
-  <a class='wavy-exempt' href='/' aria-label="home">
-    <svg class='logo' xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-home" width="48" height="48" viewBox="0 0 24 24" stroke-width="2" stroke="white" fill="none" stroke-linecap="round" stroke-linejoin="round">
+  <a class="wavy-exempt" href="/" aria-label="home">
+    <svg
+      class="logo"
+      xmlns="http://www.w3.org/2000/svg"
+      class="icon icon-tabler icon-tabler-home"
+      width="48"
+      height="48"
+      viewBox="0 0 24 24"
+      stroke-width="2"
+      stroke="white"
+      fill="none"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+    >
       <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
       <polyline points="5 12 3 12 12 3 21 12 19 12"></polyline>
       <path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7"></path>
@@ -27,7 +39,7 @@ import ThemeIcon from "../components/ThemeIcon.astro";
 
   .logo:hover {
     transform: scale(1.02);
-    stroke: dodgerblue;
+    opacity: 0.7;
   }
 
   .logo {
@@ -35,6 +47,10 @@ import ThemeIcon from "../components/ThemeIcon.astro";
     transition: 0.2s;
   }
 
-  :global(.dark) .logo { stroke: white; }
-  :global(.dark) .logo:hover { stroke: dodgerblue }
+  :global(.dark) .logo {
+    stroke: white;
+  }
+  :global(.dark) .logo:hover {
+    opacity: 0.7;
+  }
 </style>
