--- a/src/components/MorePost.astro
+++ b/src/components/MorePost.astro
@@ -1,17 +1,17 @@
 ---
-const lightGlow = 'rgb(227, 227, 227)'
-const darkGlow = 'rgb(0, 84, 255)'
-const darkBg = 'rgb(41, 44, 57)'
-const lightBg = 'rgb(250, 250, 250)'
-const {date, href, title, last} = Astro.props
+const lightGlow = "rgb(227, 227, 227)";
+const darkGlow = "rgb(0, 84, 255)";
+const darkBg = "rgb(41, 44, 57)";
+const lightBg = "rgb(250, 250, 250)";
+const { date, href, title, last } = Astro.props;
 ---
 
-<div class={last ? 'last' : ''}>
+<div class={last ? "last" : ""}>
   <a href={href}>
-  <div class='post'>
-    <p>{title}</p>
-    <p class='date'>{date}</p>
-  </div>
+    <div class="post">
+      <p>{title}</p>
+      <p class="date">{date}</p>
+    </div>
   </a>
 </div>
 
@@ -81,5 +81,4 @@ const {date, href, title, last} = Astro.props
   .last {
     margin-bottom: 4rem;
   }
-
 </style>
