--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,90 +1,99 @@
 ---
-import CopyButton from '../components/CopyButton';
+import CopyButton from "../components/CopyButton";
 ---
-<hr />
+
+<hr class="hr-override" />
 <div class="contact">
-		<h2 class='color'>Contact Me</h2>
-		<div class='btn-wrapper'>
-			<CopyButton
-				client:idle
-				message='trevortylerlee@gmail.com'
-			/>
-			<CopyButton
-				client:idle
-				message='778-235-3815'
-			/>
-		</div>
+  <h2 class="color">Contact Me</h2>
+  <div class="btn-wrapper">
+    <CopyButton client:idle message="trevortylerlee@gmail.com" />
+    <CopyButton client:idle message="778-235-3815" />
+  </div>
 </div>
 
 <style>
   .contact {
-		display: grid;
-		justify-content: center;
-		align-items: center;
-		margin-bottom: 4rem;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 4rem;
     text-align: center;
-	}
+  }
 
   .color {
     cursor: default;
-		margin-top: 2rem;
-		font-size: 2.5rem;
+    margin-top: 2rem;
+    font-size: 2.5rem;
   }
 
-	.btn-wrapper {
-		margin-top: 1rem;
-		display: flex;
-		flex-direction: column;
-		gap: 1rem;
-	}
+  .btn-wrapper {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .hr-override {
+    padding-top: 4rem;
+    border: none;
+    border-bottom: 2px solid gray;
+    opacity: 0.25;
+  }
 
   @media (prefers-reduced-motion: no-preference) {
-		.color:hover {
-		background-image: linear-gradient(140deg, rgba(252,50,254,1) 15%, rgba(255,59,0,1) 30%, rgba(241,255,33,1) 45%, rgba(73,227,253,1) 60%, rgba(51,254,4,1) 75%, rgba(43,47,255,1) 90%
-);
-		-webkit-background-clip: text;
-  	-webkit-text-fill-color: transparent; 
-  	-moz-background-clip: text;
-  	-moz-text-fill-color: transparent;
-		background-size: 400%;
-		animation: animation 1s ease-in-out infinite;
-		transform: scale(1.02);
-		}
+    .color:hover {
+      background-image: linear-gradient(
+        140deg,
+        rgba(252, 50, 254, 1) 15%,
+        rgba(255, 59, 0, 1) 30%,
+        rgba(241, 255, 33, 1) 45%,
+        rgba(73, 227, 253, 1) 60%,
+        rgba(51, 254, 4, 1) 75%,
+        rgba(43, 47, 255, 1) 90%
+      );
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      -moz-background-clip: text;
+      -moz-text-fill-color: transparent;
+      background-size: 400%;
+      animation: animation 1s ease-in-out infinite;
+      transform: scale(1.02);
+    }
 
-		@keyframes animation {
-			0% {
-				background-position: 0% 100%;
-			}
-			10% {
-				background-position: 40% 80%
-			}
-			20% {
-				background-position: 80% 60%
-			}
-			30% {
-				background-position: 120% 40%
-			}
-			40% {
-				background-position: 160% 20%
-			}
-			50% {
-				background-position: 200% 0%
-			}
-			60% {
-				background-position: 160% 20%
-			}
-			70% {
-				background-position: 120% 40%
-			}
-			80% {
-				background-position: 80% 60%
-			}
-			90% {
-				background-position: 40% 80%
-			}
-			100% {
-				background-position: 0% 100%
-			}
-		}
-	}
+    @keyframes animation {
+      0% {
+        background-position: 0% 100%;
+      }
+      10% {
+        background-position: 40% 80%;
+      }
+      20% {
+        background-position: 80% 60%;
+      }
+      30% {
+        background-position: 120% 40%;
+      }
+      40% {
+        background-position: 160% 20%;
+      }
+      50% {
+        background-position: 200% 0%;
+      }
+      60% {
+        background-position: 160% 20%;
+      }
+      70% {
+        background-position: 120% 40%;
+      }
+      80% {
+        background-position: 80% 60%;
+      }
+      90% {
+        background-position: 40% 80%;
+      }
+      100% {
+        background-position: 0% 100%;
+      }
+    }
+  }
 </style>
