adjust font on landing page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,6 +78,7 @@ for (let i = 0; i < sortedPosts.length; i++) {
     font-size: 3rem;
     cursor: default;
     display: inline;
+    font-style: italic;
   }
 
   .name,
@@ -88,6 +89,7 @@ for (let i = 0; i < sortedPosts.length; i++) {
   }
 
   .desc {
+    font-style: italic;
     margin-bottom: 4rem;
   }
 
@@ -189,6 +191,10 @@ for (let i = 0; i < sortedPosts.length; i++) {
 
     h2 {
       font-size: 3rem;
+    }
+
+    .desc {
+      font-size: 1.5rem;
     }
   }
 </style>
