--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,35 +1,34 @@
 ---
-const darkLink = 'rgb(26, 30, 43)';
+const darkLink = "rgb(26, 30, 43)";
 ---
 
-<hr class='hr'/>
+<hr class="hr" />
 <footer>
-  <div class='footer-wrapper'>
-    <span class='links'>
-  <a href='https://github.com/boogerbuttcheeks'>Github</a>
-  <a href='https://www.linkedin.com/in/trevortylerlee/'>LinkedIn</a>
-  <a href='https://twitter.com/boogerbuttcheek'>Twitter</a>
-  </span>
+  <div class="footer-wrapper">
+    <span class="links">
+      <a href="https://github.com/boogerbuttcheeks">Github</a>
+      <a href="https://www.linkedin.com/in/trevortylerlee/">LinkedIn</a>
+      <a href="https://twitter.com/boogerbuttcheek">Twitter</a>
+    </span>
     <!-- The sprites are from pokedb.net!  -->
-  <span class='pokemon'>
-    <span class='ditto name'>
-        <img src='/ditto.gif' alt='Ditto'/>
+    <span class="pokemon">
+      <span class="ditto name">
+        <img src="/ditto.gif" alt="Ditto" />
+      </span>
+      <span class="togepi name">
+        <img src="/togepi.gif" alt="Togepi" />
+      </span>
+      <span class="pichu name">
+        <img class="delete" src="/pichu.gif" alt="Pichu" />
+      </span>
+      <span class="wooper name">
+        <img class="delete" src="/wooper.gif" alt="Wooper" />
+      </span>
     </span>
-    <span class='togepi name'>
-      <img src='/togepi.gif' alt='Togepi' />
-    </span>
-    <span class='pichu name'>
-      <img class='delete' src='/pichu.gif' alt='Pichu' />
-    </span>
-    <span class='wooper name'>
-      <img class='delete' src='/wooper.gif' alt='Wooper' />
-    </span>
-  </span>
   </div>
 </footer>
 
 <style define:vars={{ darkLink }}>
-  
   .footer-wrapper {
     display: grid;
     justify-content: center;
@@ -77,7 +76,7 @@ const darkLink = 'rgb(26, 30, 43)';
   .ditto:hover img {
     opacity: 1;
   }
-  
+
   .togepi:hover img {
     opacity: 1;
   }
@@ -98,7 +97,7 @@ const darkLink = 'rgb(26, 30, 43)';
     gap: 1rem;
   }
 
-  .name::after {
+  /* .name::after {
     font-family: monospace;
     position: absolute;
     opacity: 0;
@@ -146,7 +145,7 @@ const darkLink = 'rgb(26, 30, 43)';
 
   .wooper:hover::after {
     transform: rotate(5deg);
-  }
+  } */
 
   @media (min-width: 40rem) {
     img {
