adjust inline code font size

--- a/src/styles/CodeBlock.module.css
+++ b/src/styles/CodeBlock.module.css
@@ -23,6 +23,10 @@ code {
   font-size: var(--size-300);
 }
 
+p code {
+  font-size: inherit;
+}
+
 @media (min-width: 40rem) {
   pre {
     padding: 2rem;
