various style changes

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -23,7 +23,7 @@ import CopyButton from "../components/CopyButton";
   .color {
     cursor: default;
     margin-top: 2rem;
-    font-size: 2.5rem;
+    font-size: var(--size-700);
   }
 
   .btn-wrapper {
