--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,19 +49,8 @@ for (let i = 0; i < sortedPosts.length; i++) {
   <hr />
   <div class="latest-posts">
     <h2 class="more">Latest Posts</h2>
-    <a class="view-all" href="/posts">View all</a>
+    <a class="view-all" href="/posts">View all posts</a>
   </div>
-  <!-- <MorePost
-    date="DEC 2022"
-    href="https://swankyipsum.vercel.app/"
-    title="Swanky Ipsum"
-  />
-  <MorePost
-    date="NOV 2022"
-    href="/posts/color"
-    title="HTML Color Name Game"
-    last
-  /> -->
   {
     sortedPosts.map((post, i) => (
       <MorePost
