--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -14,7 +14,7 @@ for (let i = 0; i < sortedPosts.length; i++) {
 ---
 
 <BaseLayout>
-  <h1>Posts</h1>
+  <h1>All Posts</h1>
   <!-- {
     allPosts.map((post) => (
       <div>
