copy text changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,8 +26,8 @@ for (let i = 0; i < sortedPosts.length; i++) {
   </div>
   <hr />
   <Card
-    title="Phished – Phish Friends & Family"
-    desc="Protect people you care about from phishing attacks by phishing them yourself"
+    title="Phished – Send Phishing Emails"
+    desc="Building an application to send customizable phishing emails"
     href="/posts/phished"
     src="/phished-screenshot.webp"
     alt="A tablet and smartphone are next to each other, each displaying a screenshot from the Phished website. The Phished logo, a fish with an envelope for a body, is displayed on the right with the Phished wordmark."
